--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="page">
   <header class="header centered-block">
     <h1 class="centered-block">
-      <a href="#" class="header__link" lang="en">Roman Bondarev</a>
+      <a href="#" class="header__link" lang="ru">Roman Bondarev</a>
     </h1>
   </header>
   <nav class="menu centered-block page__menu">
